--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,10 @@
   border-right: 1px solid lightgrey;
   background-color: whitesmoke;
 }
+
+h1 {
+  text-align: center;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 3em;
+  padding: 30px 0;
+}
