--- a/styles.css
+++ b/styles.css
@@ -14,18 +14,18 @@
 
 #container {
   margin: 0 auto;
-  width: 100%;
+  width: 90%;
   height: 100%;
   border-left: 1px solid lightgrey;
   border-right: 1px solid lightgrey;
   background-color: whitesmoke;
   z-index: 0;
+  text-align: center;
 }
 
 h1 {
-  text-align: center;
   font-family: 'Share Tech Mono', monospace;
-  font-size: 3em;
+  font-size: 5vw;
   padding: 30px 0;
 }
 
@@ -36,16 +36,15 @@ h1 {
 
 .board-tile {
   width: calc(50% / 8);
-  height: 75px;
+  height: 5vw;
   background-color: lightblue;
   border: 1px solid dimgrey;
   z-index: 1;
   display: inline-block;
-  font-size: 12px;
 }
 
 .hidden-tile {
-  border: 1px solid floralwhite;
+  border: 1px solid lightgrey;
   background-color: whitesmoke;
   color: whitesmoke;
   left: 10%;
@@ -57,4 +56,5 @@ h1 {
   margin-bottom: 100%;
   position: fixed;
   font-size: 0;
+  top: 20%;
 }
