--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,13 @@
   background-color: whitesmoke;
   z-index: 0;
   text-align: center;
+  min-width: 683px;
 }
 
 h1 {
   font-family: 'Share Tech Mono', monospace;
-  font-size: 5vw;
-  padding: 30px 0;
+  font-size: 3em;
+  padding: 20px 0 0;
 }
 
 .board-row {
@@ -35,8 +36,8 @@ h1 {
 }
 
 .board-tile {
-  width: calc(50% / 8);
-  height: 5vw;
+  width: 77px;
+  height: 77px;
   background-color: lightblue;
   border: 1px solid dimgrey;
   z-index: 1;
@@ -56,5 +57,5 @@ h1 {
   margin-bottom: 100%;
   position: fixed;
   font-size: 0;
-  top: 20%;
+  top: 13%;
 }
