--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 #landing {
   height: 100%;
   width: 100%;
-  background-color: grey;
+  background-color: whitesmoke;
   position: absolute;
   z-index: -100;
 }
@@ -16,8 +16,6 @@
   margin: 0 auto;
   width: 90%;
   height: 100%;
-  border-left: 1px solid lightgrey;
-  border-right: 1px solid lightgrey;
   background-color: whitesmoke;
   z-index: 0;
   text-align: center;
@@ -39,13 +37,14 @@ h1 {
   width: 77px;
   height: 77px;
   background-color: lightblue;
-  border: 1px solid dimgrey;
+  border: 1px solid grey;
   z-index: 1;
   display: inline-block;
+  border-radius: 5px;
 }
 
 .hidden-tile {
-  border: 1px solid lightgrey;
+  border: 1px solid whitesmoke;
   background-color: whitesmoke;
   color: whitesmoke;
   left: 10%;
