Added class selectors for start-point and end-point to change the background colors of each. #5

--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,11 @@ h1 {
 .selected {
   background-color: gold;
 }
+
+.start-point {
+  background-color: red;
+}
+
+.end-point {
+  background-color: green;
+}
