--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ h1 {
 }
 
 .board-row {
+  height: 77px;
   width: 100%;
   overflow: hidden;
 }
@@ -42,7 +43,7 @@ h1 {
   z-index: 1;
   display: inline-block;
   border-radius: 5px;
-  font-size: 20px;
+  font-size: 0;
 }
 
 .hidden-tile {
@@ -68,6 +69,11 @@ h1 {
   border-radius: 10px;
   height: 80px;
   width: 200px;
+}
+
+.channel-render {
+  margin: 0;
+  background-color: yellow;
 }
 
 .selected {
