Added CSS styling to divs with charge-aligned class. #6

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ h1 {
   background-color: gold;
 }
 
+.channel-render.charge-aligned {
+  background-color: orange;
+}
+
 .selected {
   background-color: gold;
 }
