--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,14 @@ h1 {
   background-color: orange;
 }
 
+.channel-render.charged {
+  background-color: aqua;
+}
+
+.channel-render.spent {
+  background-color: darkblue;
+}
+
 .selected {
   background-color: gold;
 }
