--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,28 @@ h1 {
   background-color: red;
 }
 
+.start-point.charged {
+  background-color: aqua;
+  animation: start-blink 2s infinite;
+}
+
+.charged {
+  background-color: aqua;
+}
+
 .end-point {
   background-color: green;
+}
+
+@-webkit-keyframes start-blink {
+  0%,
+  49% {
+    background-color: aqua;
+    border: 10px solid red;
+  }
+
+  50%,
+  100% {
+    background-color: #e50000;
+  }
 }
