--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,11 @@ h1 {
   background-color: green;
 }
 
+.end-point.charged {
+  background-color: aqua;
+  animation: end-blink 2s infinite;
+}
+
 @-webkit-keyframes start-blink {
   0%,
   49% {
@@ -104,5 +109,18 @@ h1 {
   50%,
   100% {
     background-color: #e50000;
+  }
+}
+
+@-webkit-keyframes end-blink {
+  0%,
+  49% {
+    background-color: aqua;
+    border: 10px solid green;
+  }
+
+  50%,
+  100% {
+    background-color: green;
   }
 }
