--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,26 @@ h1 {
   width: 200px;
 }
 
+#how-to-play-container {
+  text-align: left;
+  padding: 10px 10px 0 40px;
+  margin: 50px auto;
+  width: 525px;
+  border: 5px solid darkblue;
+  font-size: 1.5em;
+  line-height: 1em;
+}
+
+ol li {
+  margin: 15px 0;
+}
+
+#instructions-title {
+  margin: 5px;
+  text-align: center;
+  font-size: 1.75em;
+}
+
 #charge-button {
   display: none;
 }
