--- a/styles.css
+++ b/styles.css
@@ -61,13 +61,13 @@ h1 {
   padding: 10px 10px 0 40px;
   margin: 50px auto;
   width: 525px;
-  border: 5px solid darkblue;
+  border: 5px solid black;
   font-size: 1.5em;
   line-height: 1em;
 }
 
 ol li {
-  margin: 15px 0;
+  margin: 20px 0;
 }
 
 #instructions-title {
