--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ h1 {
   animation: title-glow 2s 2;
 }
 
-span {
+.span-title {
   font-family: 'Share Tech Mono', monospace;
   background-color: black;
 }
